--- a/hangmanpt2.html
+++ b/hangmanpt2.html
@@ -53,27 +53,22 @@
               // this is the secret word!
               word =  "c o m e u p p a n c e";
               blank = "- - - - - - - - - - -";
-                $("#word").text(blank);
+                $("#word1").text(blank);
                  console.log("blanks responding");
 
             word = "c o n t e m p l a t i o n"
             blank = "- - - - - - - - - - - - -"
-                 $("#word").text(blank);
-                 console.log("blanks responding");
-
-            word = "c h r o m o s o m e"
-            blank = "- - - - - - - - - -"
-                 $("#word").text(blank);
+                 $("#word2").text(blank);
                  console.log("blanks responding");
 
            word = "c u n t"
            blank = "- - - -"
-                 $("#word").text(blank);
+                 $("#word3").text(blank);
                  console.log("blanks responding");
 
            word = "a s s l i c k e r"
            blank = "- - - - - - - - -"
-                 $("#word").text(blank);
+                 $("#word4").text(blank);
                  console.log("blanks responding");
 
 
@@ -170,7 +165,10 @@
      <div id="guesses">10 Guesses left</div>
      <div id="welcome"><p><h3>Welcome to HANGMAN! You have 10 chances to spell the mystery word correctly!</h3></p></div>
      <div id="info"></div>
-     <div id="word"></div>
+     <div id="word1"></div>
+     <div id="word2"></div>
+     <div id="word3"></div>
+     <div id="word4"></div>
      <div id="alphabet"><p>Click to make a guess!</p>
      <span class="letter" id="a">a</span>
      <span class="letter" id="b">b</span>
