--- a/lab700.html
+++ b/lab700.html
@@ -8,6 +8,10 @@
   </head>
 
   <style>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
+    
     h3 {
       font-color: blue;
       font-family: Helvetica, Arial, times, serif;
