--- a/lab701.html
+++ b/lab701.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
 <head>
-  <title><h1>This is a map.</h1></title>
+  <title>This is a map.</title>
   
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
