--- a/lab701.html
+++ b/lab701.html
@@ -17,9 +17,10 @@
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin="">
 
+     $(document).ready (function() {
      var map = L.map('map').setView([51.505, -0.09], 13); 
     
-     
+     }
      </script>
 
    
