--- a/lab701.html
+++ b/lab701.html
@@ -8,10 +8,7 @@
      crossorigin=""/>
 </head>
   <style>
-    #map {
-      height: 180px;
-      width: 200px;
-    }
+    #map { height: 180px; }
   </style>
   
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
