--- a/lab701.html
+++ b/lab701.html
@@ -30,7 +30,7 @@
        marker.bindPopup("<b>Hello world! I am a popup.").openPopup();
        
        var circle = L.circle([51.508, -0.11]), {
-         color: 'red",
+         color: "red",
          fillColor: "#f03",
          fillOpacity: 0.5,
          radius: 500,
