--- a/lab701.html
+++ b/lab701.html
@@ -31,7 +31,7 @@
        
        var circle = L.circle([51.508, -0.11]), {
          color: red,
-         fillColor: #f03,
+         fillColor: "#f03",
          fillOpacity: 0.5,
          radius: 500,
        }).addTo(map),
