--- a/lab701.html
+++ b/lab701.html
@@ -30,9 +30,9 @@
        marker.bindPopup("<b>Hello world! I am a popup.").openPopup();
        
        var circle = L.circle([51.508, -0.11]), {
-         color: red,
-         fillOpacity: 0.5,
-         radius: 500,
+         color: "red",
+         fillOpacity: "0.5",
+         radius: "500",
        }).addTo(map),
        circle.bindPopup("I am a circle.");
 
