--- a/lab702.html
+++ b/lab702.html
@@ -47,10 +47,8 @@
     [32.736044, -117.151021],
     [32.736005, -117.151084],
     [32.735950, -117.151074],
-    [32.735937, -117.151102], {
-      color: 'purple',
-      fillColor: 'purple',
-    }]).addTo(map);
+    [32.735937, -117.151102]
+    ]).addTo(map);
        polygon.bindPopup("My favorite part of San Diego.");
 
     var popup = L.popup()
