--- a/lab800.html
+++ b/lab800.html
@@ -72,7 +72,16 @@
                 var layerControl = L.control.layers(baseMaps, null).addto(map);
 		
 		// let's add the Denver ACS data -- ##4 here
+                $.getJSON('./acs_denver_2021_layer', function(data) {
+			//convert file (data) into a layer
+			acsDenver2021Layer = L.geoJSON(data).addTo(map);
 
+			//move map to area of data
+			map.panTo(acsDenver2021Layer.getBounds().getCenter());
+
+			// add the map to the layer controls
+			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
+		});
 
 		// let's try to add some remote DRCOG data
 		$.getJSON('https://data.colorado.gov/api/geospatial/trm9-dm4m?method=export&format=GeoJSON', function(data) {
