--- a/lab800.html
+++ b/lab800.html
@@ -74,13 +74,13 @@
 		// let's add the Denver ACS data -- ##4 here
                 $.getJSON('./acs_denver_2021_layer', function(data) {
 			//convert file (data) into a layer
-			acsDenver2021Layer = L.geoJSON(data).addTo(map);
+			acs_Denver_2021_Layer = L.geoJSON(data).addTo(map);
 
 			//move map to area of data
-			map.panTo(acsDenver2021Layer.getBounds().getCenter());
+			map.panTo(acs_Denver_2021_Layer.getBounds().getCenter());
 
 			// add the map to the layer controls
-			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
+			layerControl.addOverlay(acs_Denver_2021_Layer, "Census 2021");
 		});
 
 		// let's try to add some remote DRCOG data
