--- a/lab800.html
+++ b/lab800.html
@@ -73,15 +73,15 @@
                 var layerControl = L.control.layers(baseMaps, null).addto(map);
 		
 		// let's add the Denver ACS data -- ##4 here
-                $.getJSON('./acs_denver_2021_layer', function(data) {
+                $.getJSON('./acsDenver2021Layer.txt', function(data) {
 			//convert file (data) into a layer
-			acs_Denver_2021_Layer = L.geoJSON(data).addTo(map);
+			acsDenver2021Layer = L.geoJSON(data).addTo(map);
 
 			//move map to area of data
-			map.panTo(acs_Denver_2021_Layer.getBounds().getCenter());
+			map.panTo(acsDenver2021Layer.getBounds().getCenter());
 
 			// add the map to the layer controls
-			layerControl.addOverlay(acs_Denver_2021_Layer, "Census 2021");
+			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
 		});
 
 		// let's try to add some remote DRCOG data
