--- a/lab800.html
+++ b/lab800.html
@@ -48,8 +48,8 @@
 	$(document).ready(function() {
 
 		// let's create our basemap! -- ##1 here
-                map = L.map('map',{center: [0,0], zoom: 10});
-		
+                map = L.map('map').setView([0,0], 10);
+
 		// let's add three sets of background tiles - one from OSM,  one from HOT OSM, and one from openTopoMap
 		var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			maxZoom: 19,
@@ -67,9 +67,8 @@
 	
 		// this is an object to keep track of our three basemaps -- ##2 here
                 var baseMaps = { "OpenStreetMap" : OSMTiles,
-				"Humanitarian OSM" : HOTOSMTiles,
-				"OpenTopoMap" : OpenTopoMap 
-			       };
+			   "Humanitarian OSM" : HOTOSMTiles,
+              "OpenTopoMap" : OpenTopoMap };
 
 
 		// the control let's the user turn on / off layers -- ##3 here
