--- a/lab800.html
+++ b/lab800.html
@@ -72,7 +72,7 @@
 
 
 		// the control let's the user turn on / off layers -- ##3 here
-                var layerControl = L.control.layers(baseMaps,null).addto(map);
+                var layerControl = L.control.layers(baseMaps,null).addTo(map);
 		
 		// let's add the Denver ACS data -- ##4 here
                 $.getJSON('./acsDenver2021Layer.txt', function(data) {
