--- a/lab9.html
+++ b/lab9.html
@@ -73,18 +73,40 @@
 
 		// the control let's the user turn on / off layers -- ##3 here
                 var layerControl = L.control.layers(baseMaps,null).addTo(map);
+
+		//begin style1
+		function style1(feature) {
+			d = feature.properties.PCT_POVERTY;
+			answer = d > 30 ? '#800026' :
+				d > 20 ? '#DB0026' :
+				d > 15 ? '#E31A1C' :
+				d > 10 ? '#FC4E2A' :
+				d > 5 ? '#FD8D3C' :
+				d > 3 ? '#FEB24C' :
+				d > 1 ? '#FED976' :
+				        '#FFEDA0' ;
+			style = {
+				fillColor: answer,
+				weight : 1,
+				opacity : 1,
+				color : 'white',
+				dashArray : '3',
+				fillOpacity : 0.7
+			}
+			return style;
+		}
+                }
+
 		
 		// let's add the Denver ACS data -- ##4 here
-                $.getJSON('./acsDenver2021Layer.txt', function(data) {
-			//convert file (data) into a layer
-			acsDenver2021Layer = L.geoJSON(data).addTo(map);
-
-			//move map to area of data
+                $.getJSON('./acs_denver_2021.geojson', function(data) {
+			acsDenver2021Layer = L.geoJSON(data, 
+                           { style: style1 }).addTo(map);
 			map.panTo(acsDenver2021Layer.getBounds().getCenter());
-
-			// add the map to the layer controls
 			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
 		});
+
+
 
 		// let's try to add some remote DRCOG data
 		$.getJSON('https://data.colorado.gov/api/geospatial/trm9-dm4m?method=export&format=GeoJSON', function(data) {
