--- a/lab9.html
+++ b/lab9.html
@@ -105,7 +105,7 @@
 			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
 		});
 
-		acsDenver2021Layer = L.geoJSON(data,{ style : style1,
+		acsDenver2021Layer = L.geoJSON((data), { style : style1,
 			onEachFeature : function(feature, layer) {
 				layer.bindPopup("Percent Poverty: " + feature.properties.PCT_POVERTY + "%");
 				}
