--- a/lab9.html
+++ b/lab9.html
@@ -98,7 +98,7 @@
 
 		
 		// let's add the Denver ACS data -- ##4 here
-                $.getJSON('./acsDenver2021Layer.geojson', function(data) {
+                $.getJSON('./acsDenver2021Layer.txt', function(data) {
 			acsDenver2021Layer = L.geoJSON(data, 
 { style: style1 }).addTo(map);
 			map.panTo(acsDenver2021Layer.getBounds().getCenter());
