--- a/lab9.html
+++ b/lab9.html
@@ -76,7 +76,7 @@
 
 		//begin style1
 		function style1(feature) {
-			d = feature.properties.PCT_POVERTY;
+			d = feature.properties.ANCESTRY_Scottish;
 		answer = d > 30 ? '#800026' : 
 			d > 20 ? '#DB0026' : 
 			d > 15 ? '#E31A1C' : 
@@ -109,7 +109,7 @@
 		acsDenver2021Layer = L.geoJSON(data, { 
 			style : style1,
 			onEachFeature : function(feature, layer) {
-				layer.bindPopup("Percent Poverty: " + feature.properties.PCT_POVERTY + "%");
+				layer.bindPopup("Percent Scottish: " + feature.properties.ANCESTRY_Scottish + "%");
 				}
 			}).addTo(map);
 
