--- a/lab9.html
+++ b/lab9.html
@@ -99,26 +99,25 @@
 		
 		// let's add the Denver ACS data -- ##4 here
                 $.getJSON('./acsDenver2021Layer.txt', function(data) {
-			acsDenver2021Layer = L.geoJSON(data, {
-				style : style1
-			}).addTo(map);
+			//convert file (data) into a layer
+			acsDenver2021Layer = L.geoJSON(data).addTo(map);
+
+			//move map to area of data
 			map.panTo(acsDenver2021Layer.getBounds().getCenter());
+
+			// add the map to the layer controls
 			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
 		});
-
-		acsDenver2021Layer = L.geoJSON(data, { 
-			style : style1,
-			onEachFeature : function(feature, layer) {
-				layer.bindPopup("Percent Language Other Than English: " + feature.properties.PCT_languageOtherThanEnglish + "%");
-				}
-			}).addTo(map);
-
 
 		// let's try to add some remote DRCOG data
 		$.getJSON('https://data.colorado.gov/api/geospatial/trm9-dm4m?method=export&format=GeoJSON', function(data) {
 			newLayer = L.geoJSON(data);
 			layerControl.addOverlay(newLayer, "Highway Markers");
 		});
+
+
+	// end document ready
+	});
 
 
 	// end document ready
@@ -131,6 +130,7 @@
 
 <div id="header">
 	<h1><a href="https://www.census.gov/programs-surveys/acs">Denver 2021 American Community Survey (Census) data</a></h1>
+	
 	<p>Data from <a href="https://denvergov.org/opendata/dataset/city-and-county-of-denver-american-community-survey-blk-grp-2017-2021">Denver Open Data</a></p>
 </div>
 <div id="map"></div>
