--- a/lab9.html
+++ b/lab9.html
@@ -109,6 +109,14 @@
 			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
 		});
 
+		acsDenver2021Layer = L.geoJSON(data, { style : style1,
+			onEachFeature : function(feature, layer) {
+				layer.bindPopup("Percent Poverty: " + 
+                                feature.properties.PCT_POVERTY + "%");
+			}
+			}).addTo(map);
+
+
 		// let's try to add some remote DRCOG data
 		$.getJSON('https://data.colorado.gov/api/geospatial/trm9-dm4m?method=export&format=GeoJSON', function(data) {
 			newLayer = L.geoJSON(data);
