--- a/lab9.html
+++ b/lab9.html
@@ -103,7 +103,7 @@
 			acsDenver2021Layer = L.geoJSON(data, { style : style1,
 			onEachFeature : function(feature, layer) {
 				layer.bindPopup("Forgein Language Speakers: " + 
-                                feature.properties.TTL_POPULATION_ALL - feature.properties.ONLY_ENGLISH_LNG);
+                                feature.properties.TTL_POPULATION_ALL - feature.properties.ONLY_ENGLISH_LNG = );
 			}
 			}).addTo(map);
 			
