--- a/Lab10.html
+++ b/Lab10.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Lab 9 - Choropleth Map</title>
+	<title>Lab 10 - Choropleth Map with LEGEND</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
