--- a/Lab10.html
+++ b/Lab10.html
@@ -39,19 +39,19 @@
 		
 		a { text-decoration: none; color: inherit; }
 
-    .legend {
-    line-height: 18px;
-    color: #555;
-    background-color: #eeeeee;
-    padding: 2px;
-}
-.legend i {
-    width: 18px;
-    height: 18px;
-    float: left;
-    margin-right: 8px;
-    opacity: 0.8;
-}
+                .legend {
+                      line-height: 18px;
+                      color: #555;
+                      background-color: #eeeeee;
+                      padding: 2px;
+                 }
+                .legend i {
+                      width: 18px;
+                      height: 18px;
+                      float: left;
+                      margin-right: 8px;
+                      opacity: 0.8;
+                 }
 	</style>
 
 <script>
@@ -116,11 +116,11 @@ legend.onAdd = function (map) {
     var div = L.DomUtil.create('div', 'info legend');
 	 colors = ['#FFEDA0','#FED976','#FEB24C' ,'#FD8D3C','#FC4E2A','#E31A1C',
                  '#BD0026','#800026'];
-       labels = ['0 - 100', '101 - 500', '501 - 1000', '1001 - 2500', '2501 - 5000', 
-                 '5001 - 7500', '7501 - 9999','10000+' ];
+       labels = ['0 - 99', '100 - 499', '500 - 999', '1000 - 2499', '2500 - 4999', 
+                 '5000 - 7499', '7500 - 9999', '10000+' ];
     // note that you'll want to change these values to match your classes
 
-    div.innerHTML = '<h2># Forgein Speakers</h2><br>';
+    div.innerHTML = '<h2>Number of Forgein Speakers</h2><br>';
     // loop through our density intervals and generate a label with a colored square for each interval
     for (var i = 0; i < colors.length; i++) {
         div.innerHTML += '<i style="background:' + colors[i] + '"></i> ' + labels[i] + '<br>';
@@ -129,7 +129,7 @@ legend.onAdd = function (map) {
     return div;
 };
 
-legend.addTo(map);
+        legend.addTo(map);
       
 		}
 
