--- a/Lab10.html
+++ b/Lab10.html
@@ -41,8 +41,8 @@
 
                 .legend {
                       line-height: 18px;
-                      color: #555;
-                      background-color: #eeeeee;
+                      color: black;
+                      background-color: white;
                       padding: 2px;
                  }
                 .legend i {
@@ -117,7 +117,7 @@ legend.onAdd = function (map) {
 	 colors = ['#FFEDA0','#FED976','#FEB24C' ,'#FD8D3C','#FC4E2A','#E31A1C',
                  '#BD0026','#800026'];
        labels = ['0 - 99', '100 - 499', '500 - 999', '1000 - 2499', '2500 - 4999', 
-                 '5000 - 7499', '7500 - 9999', '10000+' ];
+                 '5000 - 7499', '7500 - 9999', '10000' ];
     // note that you'll want to change these values to match your classes
 
     div.innerHTML = '<h2>Number of Forgein Speakers</h2><br>';
