--- a/Lab10.html
+++ b/Lab10.html
@@ -116,8 +116,8 @@ legend.onAdd = function (map) {
     var div = L.DomUtil.create('div', 'info legend');
 	 colors = ['#FFEDA0','#FED976','#FEB24C' ,'#FD8D3C','#FC4E2A','#E31A1C',
                  '#BD0026','#800026'];
-       labels = ['0 - 99', '100 - 499', '500 - 999', '1000 - 2499', '2500 - 4999', 
-                 '5000 - 7499', '7500 - 9999', '10000' ];
+       labels = ['> 100', '> 500', '> 1000', '> 2500', 
+                 '> 5000', '> 7500', '> 10000' ];
     // note that you'll want to change these values to match your classes
 
     div.innerHTML = '<h2>Number of Forgein Speakers</h2><br>';
