--- a/FinalProject.html
+++ b/FinalProject.html
@@ -38,7 +38,7 @@
           //add basemep and background tiles
           map = L.map('map').setView([0,0], 10);
           var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-              maxZoom: 19;
+              maxZoom: 20
               attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 		      }).addTo(map);
           var OpenTopoMap = L.tileLayer('https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {
