--- a/FinalProject.html
+++ b/FinalProject.html
@@ -51,7 +51,11 @@
                         "OpenTopoMap" : OpenTopoMap };
         var layerControl = L.control.layers(baseMaps,null).addTo(map);
 
-        //
+        //add GeoJSON
+	$.getJSON('./GreeceAndTurkey.geo.json' , function(data) {
+		GreeceAndTurkeyLayer = L.geoJSON(data).addTo(map);
+		map.panTo(GreeceAndTurkeyLayer);
+		
         
 	});
       </script>
