--- a/FinalProject.html
+++ b/FinalProject.html
@@ -36,7 +36,7 @@
         $(document).ready(function() {
           
           //add basemep and background tiles
-          map = L.map('map').setView([0,0], 10);
+          map = L.map('map').setView(GreeceAndTurkeyLayer);
           var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
               maxZoom: 20,
               attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
