--- a/FinalProject.html
+++ b/FinalProject.html
@@ -36,7 +36,7 @@
         $(document).ready(function() {
           
           //add basemep and background tiles
-          map = L.map('map').setView([37.73113462122034, 22.756175589428228], 10);
+          map = L.map('map').setView([0,0], 10);
           var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
               maxZoom: 20,
               attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
@@ -53,8 +53,14 @@
 
         //add GeoJSON
 	$.getJSON('./GreeceAndTurkey.geo.json' , function(data) {
+		//convert file into GeoJson
 		GreeceAndTurkeyLayer = L.geoJSON(data).addTo(map);
+		
+		//move map to area
 		map.panTo(GreeceAndTurkeyLayer.getBounds().getCenter());
+
+		// add to layer controls
+		layerControl.addOverley(GreeceAndTurkeyLayer);
 		
 	});
 	});
