--- a/FinalProject.html
+++ b/FinalProject.html
@@ -52,7 +52,7 @@
         var layerControl = L.control.layers(baseMaps,null).addTo(map);
 
         //add GeoJSON
-	$.getJSON('./greeceAndTurkey3.txt' , function(data) {
+	$.getJSON('./ne_50m_land.shp' , function(data) {
 		//convert file into GeoJson
 		greeceAndTurkeyLayer = L.geoJSON(data).addTo(map);
 		
