--- a/FinalProject.html
+++ b/FinalProject.html
@@ -47,7 +47,7 @@
 		      });
 		//add 12 markers and popups with labors
 		var marker = L.marker([37.81834040761616, 22.661747815062714]).addTo(map);
-                var marker.bindPopup("The First Labor")
+                    marker.bindPopup("The First Labor")
 
 			  
         //two basemaps and control to turn on / off
