--- a/FinalProject.html
+++ b/FinalProject.html
@@ -62,7 +62,7 @@
 		 marker.bindPopup("7: The Cretan Bull")
 		var marker = L.marker([42.343980, 25.263988]).addTo(map);
 		 marker.bindPopup("8: The Mares of Diomedes")
-		var marker = L.marker([51.050073, 39.864636]).addTo(map);
+		var marker = L.marker([41.211301317240235, 37.02032449695944]).addTo(map);
 		 marker.bindPopup("9: The Girdle of Hippolyte")
 		var marker = L.marker([40.315254, 26.551427]).addTo(map);
 		 marker.bindPopup("10: The Oxen of Geryones")
