--- a/FinalProject.html
+++ b/FinalProject.html
@@ -27,9 +27,23 @@
           align: center;
         }
         p {
-          font: serif 20px;
+          font: serif 18px;
           color: 800080;
         }
+	#photo
+	      height: 700px;
+      width: 500px;
+      border: 1px solid #000000;
+      border-radius: 50%;
+      padding: 5px;
+      display: block;
+      margin: auto;
+    }
+    .caption {
+      font-size: 10px;
+      font-text: Times;
+      text-align: center;
+	      }
       </style>
       <script>
         //document ready
@@ -102,7 +116,7 @@
       <div id="map"></div>
 
 	    <p>THE FIRST LABOR: The Nemean Lion
-	    <div id="photo1">
+	    <div id="photo">
     <img id="Lion" src="herakles-wrestling-with-the-nemean-lion-by-psiax.webp">
       <p class="caption">Herakles Wrestleing with the Nemean Lion<p/>
       <p class="caption">Psiax (520–500 BCE)</p>
@@ -110,7 +124,7 @@
     </div></p>
 	    
 	    <p>THE SECOND LABOR: The Hydra
-		    <div id="photo2">
+		    <div id="photo">
 	    <img id="Hydra" src="hercules-and-the-lernaean-hydra-1875-1876-by-gustave-moreau-art-institute-of-chicago.webp">
 	    <p class="caption">Hercules and the Lernean Hydra</p>
 	    <p class="caption">Gusta Moreau(1875-1876)</p>
@@ -118,7 +132,7 @@
 		    </div></p>
    
 	    <p>THE THIRD LABOR: The Horned Hind
-		    <div id="photo3">
+		    <div id="photo">
 	    <img id="Hind" src= "heracles-chasing-ceryneian-hind-illustration-1913.webp">
 	    <p class="caption">Hercules chasing the Ceryneian Hind</p>
 	    <p class="caption">Edward Silvester Ellis and Charles F. Horne, The Story of the Greatest Nations (1913)</p>
