--- a/FinalProject.html
+++ b/FinalProject.html
@@ -30,11 +30,11 @@
           font: serif 18px;
           color: 800080;
         }
-	#photo
-	      height: 700px;
-      width: 500px;
+	#photo {
+	      height: 250px;
+      width: 150px;
       border: 1px solid #000000;
-      border-radius: 50%;
+      border-radius: 20%;
       padding: 5px;
       display: block;
       margin: auto;
