--- a/FinalProject.html
+++ b/FinalProject.html
@@ -30,7 +30,7 @@
           font: serif 18px;
           color: 800080;
         }
-	#photo {
+	#Lion {
 	      height: 250px;
       width: 150px;
       border: 1px solid #000000;
@@ -38,7 +38,25 @@
       padding: 5px;
       display: block;
       margin: auto;
-    }
+       }
+       #Hydra {
+          height: 250px;
+          width: 150px;
+          border: 1px solid #000000;
+          border-radius: 20%;
+          padding: 5px;
+          display: block;
+          margin: auto;
+       }
+  #Hind {
+          height: 250px;
+          width: 150px;
+          border: 1px solid #000000;
+          border-radius: 20%;
+          padding: 5px;
+          display: block;
+          margin: auto;
+  }
     .caption {
       font-size: 10px;
       font-text: Times;
