--- a/FinalProject.html
+++ b/FinalProject.html
@@ -146,7 +146,7 @@
                 <img id="Lion" src="herakles-wrestling-with-the-nemean-lion-by-psiax.webp">
                 <p class="caption">Herakles Wrestleing with the Nemean Lion<p/>
                 <p class="caption">Psiax (520–500 BCE)</p>
-                ,p class="caption"><a href = 'https://commons.m.wikimedia.org/wiki/File:Psiax_ABV_292_1_Herakles_and_the_lion_-_two_young_warriors_leaving_home_(01).jpg'>ArchaiOptix</a>
+                <p class="caption"><a href = 'https://commons.m.wikimedia.org/wiki/File:Psiax_ABV_292_1_Herakles_and_the_lion_-_two_young_warriors_leaving_home_(01).jpg'>ArchaiOptix</a>
             </p>
 	    
 	    <p>THE SECOND LABOR: The Hydra</p>
@@ -155,7 +155,6 @@
 	        <p class="caption">Gusta Moreau (1875-1876)</p>
 	        <p class="caption"><a href = 'https://www.artic.edu/artworks/20579/hercules-and-the-lernaean-hydra> The Art Institue of Chicago</a></p>
 		    
-
 	   <p>THE THIRD LABOR: The Horned Hind</p>
 		    <img id="Hind" src="heracles-chasing-ceryneian-hind-illustration-1913.webp">
 		    <p class="caption">Heracles Chasing the Ceryneian Hind</p>
