--- a/FinalProject.html
+++ b/FinalProject.html
@@ -28,7 +28,9 @@
         }
         p {
           font: serif 18px;
+	  font-style: italic;
           color: 800080;
+	  align: center;
         }
 	#Lion {
 	      height: 300px;
@@ -240,7 +242,7 @@
 		  <p class="caption"><a href = 'https://www.rijksmuseum.nl/nl/collectie/RP-P-1882-A-6107'>RijksMuseum</a>
 
 	    <p>THE FIFTH LABOR:</p>
-	     <img id="Stables" src"hercules_clean_the_augean_stables_in_a_single_day_by_sylvester0102_dft9i79-414w-2x.jpg">
+	     <img id="Stables" src="hercules_clean_the_augean_stables_in_a_single_day_by_sylvester0102_dft9i79-414w-2x.jpg">
 	       <p class="caption">Hercules clean the Augean stables in a single day</p>
 	       <p class="caption">Art by Sylvester0102</p>
 	       <p class="caption"><a href = 'https://www.deviantart.com/sylvester0102/art/Hercules-clean-the-Augean-stables-in-a-single-day-956144997'>DeviantArt</a></p>
