--- a/FinalProject.html
+++ b/FinalProject.html
@@ -31,6 +31,9 @@
           color: 800080;
 	  align: center;
         }
+	      h5 {
+		   color: 800080;   
+	      }
 	      .description {
 		      font-size: 15px;
 		      font:serif;
@@ -218,7 +221,7 @@
       madness cursed on him by Hera, Heracles sought advice from Apollo and was then tasked with completing 12 impossible feats by King Eurystheus in 
       an attempt to make upfor the death of his wife and children.</p>
         <p>Here, I have created a map to show where each of his 12 labors is thought to have taken place.</p>
-      <p><h5></h5>I would like to note that while some of these locations are associated with modern maps, 
+      <p><h5>I would like to note that while some of these locations are associated with modern maps, 
         the others on this map are theorized locations based off of the inforation provided in each story.</h5></p>
       
       <div id="map"></div>
@@ -236,7 +239,7 @@
 	        <img id="Hydra" src="hercules-and-the-lernaean-hydra-1875-1876-by-gustave-moreau-art-institute-of-chicago.webp">
 	        <p class="caption">Hercules and the Lernean Hydra</p>
 	        <p class="caption">Gusta Moreau (1875-1876)</p>
-	        <p class="caption"><a href = 'https://www.artic.edu/artworks/20579/hercules-and-the-lernaean-hydra> The Art Institue of Chicago</a></p>
+	        <p class="caption"><a href = 'https://www.artic.edu/artworks/20579/hercules-and-the-lernaean-hydra'> The Art Institue of Chicago</a></p>
 		<p class="description">During this labor, Heracles was assisted by his nephew Iolaus. It was not a easy battle as Heracles had to destroy each
 					   of the nine heads while being held by the creature. As the heads were destroyed, Iolaus burnt the stumps to ensure
 					   they would not grow back. After, Heracles buried the one immortal head (which was severed instead of being crushed) and
