--- a/FinalProject.html
+++ b/FinalProject.html
@@ -208,6 +208,27 @@
 		//move map to area
 		map.panTo(greeceAndTurkeyLayer.getBounds().getCenter());
 
+		$("#hide").click(function(){
+      console.log("hide the picture")
+    $("#Lion").hide(2000);
+      //when clicked this should hide the picture
+      });
+    
+    $("#show").click(function(){
+    $("#Lion").show(2000);
+      //when clicked this should show the picture
+      console.log("show the picture")
+
+	    $("#hide").click(function(){
+      console.log("hide the picture")
+    $("#Hydra").hide(2000);
+      //when clicked this should hide the picture
+      });
+    
+    $("#show").click(function(){
+    $("#Hydra").show(2000);
+      //when clicked this should show the picture
+      console.log("show the picture")
 		
 		
 	});
