--- a/FinalProject.html
+++ b/FinalProject.html
@@ -170,8 +170,7 @@
 		      });
 		//add 12 markers and popups with labors
 		var marker = L.marker([37.81834040761616, 22.661747815062714]).addTo(map);
-                    marker.bindPopup("1: The Nemean Lion")
-			<button id="#zoom-task1">Zoom to details</button>
+                    marker.bindPopup("1: The Nemean Lion" <button id="#zoom-task1">Zoom to details</button>) 
 		var marker = L.marker([37.558121, 22.706667]).addTo(map);
 		    marker.bindPopup("2: The Hydra")
 		var marker = L.marker([37.890586, 21.527288]).addTo(map);
@@ -231,7 +230,7 @@
       
       <div id="map"></div>
 
-	   <div id="task1">THE FIRST LABOR: The Nemean Lion
+	   <div id="task1"><p>THE FIRST LABOR: The Nemean Lion</p>
 		   
                 <img id="Lion" src="herakles-wrestling-with-the-nemean-lion-by-psiax.webp">
                 <p class="caption">Herakles Wrestleing with the Nemean Lion<p/>
@@ -239,7 +238,8 @@
                 <p class="caption"><a href = 'https://www.perseus.tufts.edu/Herakles/lion.html'>University of Mississippi</a>
             </p>
 	    <p class="description">Heracles' was first sent to Nemea to defeat the lion with a nearly impenetrable pelt. Using his bare hands, Heracles was 
-		    able to defeat the beast and then use the pelt of the Nemean lion as a type of armor.</p></div>
+		    able to defeat the beast and then use the pelt of the Nemean lion as a type of armor.</p>
+	   </div>
 	  
 	    <div id="task2">
 		    <p>THE SECOND LABOR: The Hydra</p>
