--- a/FinalProject.html
+++ b/FinalProject.html
@@ -170,7 +170,7 @@
 		      });
 		//add 12 markers and popups with labors
 		var marker = L.marker([37.81834040761616, 22.661747815062714]).addTo(map);
-                    marker.bindPopup('"1: The Nemean Lion"<button id="#zoom-task1"'>)Show details</button>
+                    marker.bindPopup('1: The Nemean Lion<button id="#zoom-task1">Show details</button>')
 		var marker = L.marker([37.558121, 22.706667]).addTo(map);
 		    marker.bindPopup("2: The Hydra")
 		var marker = L.marker([37.890586, 21.527288]).addTo(map);
