--- a/FinalProject.html
+++ b/FinalProject.html
@@ -169,29 +169,29 @@
 		        	attribution: 'Map data: &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, <a href="http://viewfinderpanoramas.org">SRTM</a> | Map style: &copy; <a href="https://opentopomap.org">OpenTopoMap</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>)'
 		      });
 		//add 12 markers and popups with labors
-		var marker = L.marker([37.81834040761616, 22.661747815062714]).addTo(map);
+		var marker1 = L.marker([37.81834040761616, 22.661747815062714]).addTo(map);
                     marker.bindPopup('1: The Nemean Lion<button id="#zoom-task1">Show details</button>')
-		var marker = L.marker([37.558121, 22.706667]).addTo(map);
+		var marker2 = L.marker([37.558121, 22.706667]).addTo(map);
 		    marker.bindPopup("2: The Hydra")
-		var marker = L.marker([37.890586, 21.527288]).addTo(map);
+		var marker3 = L.marker([37.890586, 21.527288]).addTo(map);
 		 marker.bindPopup("3: The Horned Hind")
-		var marker = L.marker([37.966915, 21.799978]).addTo(map);
+		var marker4 = L.marker([37.966915, 21.799978]).addTo(map);
 		 marker.bindPopup("4: The Erymanthian Boar")
-		var marker = L.marker([37.636392, 21.629884]).addTo(map);
+		var marker5 = L.marker([37.636392, 21.629884]).addTo(map);
 		 marker.bindPopup("5: The Augean Stables ")
-		var marker = L.marker([37.852338, 22.461780]).addTo(map);
+		var marker6 = L.marker([37.852338, 22.461780]).addTo(map);
 		 marker.bindPopup("6: The Stymphalian Birds")
-		var marker = L.marker([35.338972, 25.146013]).addTo(map);
+		var marker7 = L.marker([35.338972, 25.146013]).addTo(map);
 		 marker.bindPopup("7: The Cretan Bull")
-		var marker = L.marker([42.343980, 25.263988]).addTo(map);
+		var marker8 = L.marker([42.343980, 25.263988]).addTo(map);
 		 marker.bindPopup("8: The Mares of Diomedes")
-		var marker = L.marker([41.211301317240235, 37.02032449695944]).addTo(map);
+		var marker9 = L.marker([41.211301317240235, 37.02032449695944]).addTo(map);
 		 marker.bindPopup("9: The Girdle of Hippolyte")
-		var marker = L.marker([40.315254, 26.551427]).addTo(map);
+		var marker10 = L.marker([40.315254, 26.551427]).addTo(map);
 		 marker.bindPopup("10: The Oxen of Geryones")
-		var marker = L.marker([42.6366, 44.1576]).addTo(map);
+		var marker11 = L.marker([42.6366, 44.1576]).addTo(map);
 		 marker.bindPopup("11: The Apples of Hesperides")
-		var marker = L.marker([37.498056, 23.363567]).addTo(map);
+		var marker12 = L.marker([37.498056, 23.363567]).addTo(map);
 		 marker.bindPopup("12: Cerbeus")
 
 	//click popup and zoom to description
