--- a/FinalProject.html
+++ b/FinalProject.html
@@ -195,7 +195,7 @@
 		 marker.bindPopup("12: Cerbeus")
 
 	//click popup and zoom to description
-	${"#zoom-task1"}.click(function() {
+	$("#zoom-task1").click(function() {
 		$("#task1")animate({scrollTop: $("#task1").offset().top}, 'slow');
 	});
 
