--- a/FinalProject.html
+++ b/FinalProject.html
@@ -196,7 +196,7 @@
 
 	//click popup and zoom to description
 	$("#zoom-task1").click(function() {
-		$("#task1")animate({scrollTop: $("#task1").offset().top}, 'slow');
+		$("#task1").animate({scrollTop: $("#task1").offset().top}, 'slow');
 	});
 
 	 
