--- a/FinalProject.html
+++ b/FinalProject.html
@@ -195,9 +195,54 @@
 		 marker12.bindPopup("12: Cerbeus")
 
 	//click popup and zoom to description
-	$("#zoom-task1").click(function() {
+	${"#zoom-task1"}.click(function() {
 		$("#task1").animate({scrollTop: $("#task1").offset().top}, 'slow');
 	});
+	      
+	      ${"#zoom-task2"}.click(function() {
+		$("#task2").animate({scrollTop: $("#task2").offset().top}, 'slow');
+	});
+
+	${"#zoom-task3"}.click(function() {
+		$("#task3").animate({scrollTop: $("#task3").offset().top}, 'slow');
+	});
+
+	${"#zoom-task4"}.click(function() {
+		$("#task4").animate({scrollTop: $("#task4").offset().top}, 'slow');
+	});
+
+	${"#zoom-task5"}.click(function() {
+		$("#task5").animate({scrollTop: $("#task5").offset().top}, 'slow');
+	});
+
+	${"#zoom-task6"}.click(function() {
+		$("#task6").animate({scrollTop: $("#task6").offset().top}, 'slow');
+	});
+
+	${"#zoom-task7"}.click(function() {
+		$("#task7").animate({scrollTop: $("#task7").offset().top}, 'slow');
+	});
+
+	${"#zoom-task8"}.click(function() {
+		$("#task8").animate({scrollTop: $("#task8").offset().top}, 'slow');
+	});
+
+	${"#zoom-task9"}.click(function() {
+		$("#task9").animate({scrollTop: $("#task9").offset().top}, 'slow');
+	});
+
+	${"#zoom-task10"}.click(function() {
+		$("#task10").animate({scrollTop: $("#task10").offset().top}, 'slow');
+	});
+
+	${"#zoom-task11"}.click(function() {
+		$("#task11").animate({scrollTop: $("#task11").offset().top}, 'slow');
+	});
+
+	${"#zoom-task12"}.click(function() {
+		$("#task12").animate({scrollTop: $("#task12").offset().top}, 'slow');
+	});
+
 
 	 
         //two basemaps and control to turn on / off
