--- a/FinalProject.html
+++ b/FinalProject.html
@@ -172,74 +172,74 @@
 		var marker1 = L.marker([37.81834040761616, 22.661747815062714]).addTo(map);
                     marker1.bindPopup('1: The Nemean Lion<button id="#zoom-task1">Show details</button>');
 		var marker2 = L.marker([37.558121, 22.706667]).addTo(map);
-		    marker2.bindPopup("2: The Hydra")
+		    marker2.bindPopup('2: The Hydra<button id="#zoom-task2">Show details</button>')
 		var marker3 = L.marker([37.890586, 21.527288]).addTo(map);
-		 marker3.bindPopup("3: The Horned Hind")
+		 marker3.bindPopup('3: The Horned Hind<button id="#zoom-task3">Show details</button>')
 		var marker4 = L.marker([37.966915, 21.799978]).addTo(map);
-		 marker4.bindPopup("4: The Erymanthian Boar")
+		 marker4.bindPopup('4: The Erymanthian Boar<button id="#zoom-task4">Show details</button>')
 		var marker5 = L.marker([37.636392, 21.629884]).addTo(map);
-		 marker5.bindPopup("5: The Augean Stables ")
+		 marker5.bindPopup('5: The Augean Stables<button id="#zoom-task5">Show details</button>')
 		var marker6 = L.marker([37.852338, 22.461780]).addTo(map);
-		 marker6.bindPopup("6: The Stymphalian Birds")
+		 marker6.bindPopup('6: The Stymphalian Birds<button id="#zoom-task6">Show details</button>')
 		var marker7 = L.marker([35.338972, 25.146013]).addTo(map);
-		 marker7.bindPopup("7: The Cretan Bull")
+		 marker7.bindPopup('7: The Cretan Bull<button id="#zoom-task7">Show details</button>')
 		var marker8 = L.marker([42.343980, 25.263988]).addTo(map);
-		 marker8.bindPopup("8: The Mares of Diomedes")
+		 marker8.bindPopup('8: The Mares of Diomedes<button id="#zoom-task8">Show details</button>')
 		var marker9 = L.marker([41.211301317240235, 37.02032449695944]).addTo(map);
-		 marker9.bindPopup("9: The Girdle of Hippolyte")
+		 marker9.bindPopup('9: The Girdle of Hippolyte<button id="#zoom-task9">Show details</button>')
 		var marker10 = L.marker([40.315254, 26.551427]).addTo(map);
-		 marker10.bindPopup("10: The Oxen of Geryones")
+		 marker10.bindPopup('10: The Oxen of Geryones<button id="#zoom-task10">Show details</button>')
 		var marker11 = L.marker([42.6366, 44.1576]).addTo(map);
-		 marker11.bindPopup("11: The Apples of Hesperides")
+		 marker11.bindPopup('11: The Apples of Hesperides<button id="#zoom-task11">Show details</button>')
 		var marker12 = L.marker([37.498056, 23.363567]).addTo(map);
-		 marker12.bindPopup("12: Cerbeus")
+		 marker12.bindPopup('12: Cerbeus<button id="#zoom-task12">Show details</button>')
 
 	//click popup and zoom to description
-	${"#zoom-task1"}.click(function() {
+	$("#zoom-task1").click(function() {
 		$("#task1").animate({scrollTop: $("#task1").offset().top}, 'slow');
 	});
 	      
-	      ${"#zoom-task2"}.click(function() {
+	      $("#zoom-task2").click(function() {
 		$("#task2").animate({scrollTop: $("#task2").offset().top}, 'slow');
 	});
 
-	${"#zoom-task3"}.click(function() {
+	$("#zoom-task3").click(function() {
 		$("#task3").animate({scrollTop: $("#task3").offset().top}, 'slow');
 	});
 
-	${"#zoom-task4"}.click(function() {
+	$("#zoom-task4").click(function() {
 		$("#task4").animate({scrollTop: $("#task4").offset().top}, 'slow');
 	});
 
-	${"#zoom-task5"}.click(function() {
+	$("#zoom-task5").click(function() {
 		$("#task5").animate({scrollTop: $("#task5").offset().top}, 'slow');
 	});
 
-	${"#zoom-task6"}.click(function() {
+	$("#zoom-task6").click(function() {
 		$("#task6").animate({scrollTop: $("#task6").offset().top}, 'slow');
 	});
 
-	${"#zoom-task7"}.click(function() {
+	$("#zoom-task7").click(function() {
 		$("#task7").animate({scrollTop: $("#task7").offset().top}, 'slow');
 	});
 
-	${"#zoom-task8"}.click(function() {
+	$("#zoom-task8").click(function() {
 		$("#task8").animate({scrollTop: $("#task8").offset().top}, 'slow');
 	});
 
-	${"#zoom-task9"}.click(function() {
+	$("#zoom-task9").click(function() {
 		$("#task9").animate({scrollTop: $("#task9").offset().top}, 'slow');
 	});
 
-	${"#zoom-task10"}.click(function() {
+	$("#zoom-task10").click(function() {
 		$("#task10").animate({scrollTop: $("#task10").offset().top}, 'slow');
 	});
 
-	${"#zoom-task11"}.click(function() {
+	$("#zoom-task11").click(function() {
 		$("#task11").animate({scrollTop: $("#task11").offset().top}, 'slow');
 	});
 
-	${"#zoom-task12"}.click(function() {
+	$("#zoom-task12").click(function() {
 		$("#task12").animate({scrollTop: $("#task12").offset().top}, 'slow');
 	});
 
