--- a/FinalProject.html
+++ b/FinalProject.html
@@ -286,16 +286,16 @@
 		    able to defeat the beast and then use the pelt of the Nemean lion as a type of armor.</p>
 	   </div>
 	  
-	    <div id="task2">
+	    <div id="labor2">
 		    <p>THE SECOND LABOR: The Hydra</p>
 	        <img id="Hydra" src="hercules-and-the-lernaean-hydra-1875-1876-by-gustave-moreau-art-institute-of-chicago.webp">
 	        <p class="caption">Hercules and the Lernean Hydra</p>
 	        <p class="caption">Gusta Moreau (1875-1876)</p>
 	        <p class="caption"><a href = 'https://www.artic.edu/artworks/20579/hercules-and-the-lernaean-hydra'> The Art Institue of Chicago</a></p>
-		<p class="description">During this labor, Heracles was assisted by his nephew Iolaus. It was not a easy battle as Heracles had to destroy each
+		<div id="task2"><p class="description">During this labor, Heracles was assisted by his nephew Iolaus. It was not a easy battle as Heracles had to destroy each
 					   of the nine heads while being held by the creature. As the heads were destroyed, Iolaus burnt the stumps to ensure
 					   they would not grow back. After, Heracles buried the one immortal head (which was severed instead of being crushed) and
-					   dipped his arrows in the venom of the Hydra.</p>
+					   dipped his arrows in the venom of the Hydra.</p></div>
 	    </div>
 		    
 	   <div id="task3">
